--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-data-table-component": "^7.5.4",
+    "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
